# rust-sdk

./: .gitignore  .gitmodules  Cargo.toml  DEV.md  README.md  test_socketio_client.js
.cargo/: config.toml
.claude/: CLAUDE.md
.windsurf/workflows/: arch.md  test.md
crates/smcp/: Cargo.toml
crates/smcp-agent/: Cargo.toml
crates/smcp-agent/examples/: basic_agent.rs  e2e_test_agent.rs
crates/smcp-agent/src/: async_agent.rs  auth.rs  config.rs  error.rs  events.rs  lib.rs  sync_agent.rs  tests.rs  transport.rs
crates/smcp-agent/tests/: agent_connection.rs  agent_error_handling.rs  agent_event_handling.rs  agent_room_management.rs  agent_sync.rs  agent_tool_calling.rs  auto_behavior.rs  e2e_simple_test.rs  notification_handling.rs  protocol_compatibility.rs  protocol_conformance.rs  rust_server_integration.rs
crates/smcp-agent/tests/common/: mod.rs
crates/smcp-computer/: Cargo.toml  README.md
crates/smcp-computer/src/: computer.rs  errors.rs  lib.rs  main.rs  socketio_client.rs
crates/smcp-computer/src/cli/: app.rs  commands.rs  interactive.rs  mod.rs  repl.rs  utils.rs
crates/smcp-computer/src/core/: computer.rs  events.rs  mod.rs  types.rs
crates/smcp-computer/src/desktop/: mod.rs  model.rs  organize.rs  window_uri.rs
crates/smcp-computer/src/inputs/: handler.rs  mod.rs  model.rs  providers.rs  render.rs  resolver.rs  utils.rs
crates/smcp-computer/src/manager/: errors.rs  manager.rs  mod.rs
crates/smcp-computer/src/mcp_clients/: base.rs  base_client.rs  factory.rs  http_client.rs  manager.rs  mod.rs  model.rs  render.rs  resource_cache.rs  sse_client.rs  stdio.rs  stdio_client.rs  subscription_manager.rs  utils.rs  vrl_runtime.rs
crates/smcp-computer/src/tests/: input_tests.rs  integration_tests.rs  manager_tests.rs  mcp_client_tests.rs  mod.rs
crates/smcp-computer/src/transport/: mod.rs  socketio_client.rs
crates/smcp-computer/tests/: cache_integration.rs  cache_invalidation.rs  command_input_test.rs  computer_edge_cases.rs  computer_integration.rs  desktop_integration.rs  e2e.rs  integration_tests.rs  mcp_clients_integration.rs  playwright.rs  python_rust_alignment.rs  resource_subscription_e2e.rs  socketio_client_test.rs  sse_realtime_updates.rs  test_mcp_integration.rs
crates/smcp-computer/tests/cli/: commands_test.rs
crates/smcp-computer/tests/common/: mod.rs
crates/smcp-server-core/: Cargo.toml
crates/smcp-server-core/src/: auth.rs  handler.rs  lib.rs  server.rs  session.rs
crates/smcp-server-core/tests/: debug_broadcast.rs  get_config_complete_test.rs  get_config_test.rs  get_tools_test.rs  message_forwarding.rs  room_broadcast_test.rs  room_management_test.rs  security_fixes.rs  socketio_interop.rs  test_utils.rs  tool_call_test.rs  update_config_test.rs  utils_test.rs
crates/smcp-server-hyper/: Cargo.toml
crates/smcp-server-hyper/src/: lib.rs  main.rs
crates/smcp-server-hyper/tests/: integration_test.rs  test_server.rs  websocket_upgrade_test.rs
crates/smcp/src/: lib.rs
crates/smcp/tests/: test_protocol.rs
docs/: computer-module-implementation-plan.md  smcp-agent-implementation-plan.md  todo-smcp-computer-tui.md  vendor-rust-socketio.md
docs/computer/: cli.md
docs/server/: server.md
examples/: test_stdio_server_bin.rs
examples/python/a2c_smcp/: __init__.py  smcp.py
examples/python/a2c_smcp/agent/: __init__.py  auth.py  base.py  client.py  sync_client.py  types.py
examples/python/a2c_smcp/computer/: computer.py
examples/python/a2c_smcp/computer/cli/: interactive_impl.py  main.py  utils.py
examples/python/a2c_smcp/computer/desktop/: organize.py
examples/python/a2c_smcp/computer/inputs/: cli_io.py  resolver.py
examples/python/a2c_smcp/computer/mcp_clients/: base_client.py  base_client.pyi  http_client.py  manager.py  model.py  sse_client.py  stdio_client.py  utils.py
examples/python/a2c_smcp/computer/socketio/: client.py
examples/python/a2c_smcp/computer/utils/: console.py
examples/python/a2c_smcp/server/: base.py  namespace.py  sync_base.py  sync_namespace.py  types.py
examples/python/a2c_smcp/utils/: window_uri.py
examples/python/docs/: QA.md  a2c_with_ide4ai.md  agent.md  cli.md  index.md  inputs_config.md  mcp_server_config.md  server.md
examples/python/docs/computer/inputs/: inputs.md
examples/python/docs/computer/mcp_clients/: client.md
examples/python/docs/computer/socketio/: socketio.md
examples/python/docs/server/: integration_test.md  server.md
examples/python/tests/: .coverage  __init__.py
examples/python/tests/e2e/: __init__.py  conftest.py  test_async_integration_e2e.py  test_async_integration_vrl_e2e.py  test_rust_agent_integration.py
examples/python/tests/e2e/agent/: __init__.py  conftest.py  test_async_agent_e2e.py  test_sync_agent_e2e.py
examples/python/tests/e2e/computer/: __init__.py  conftest.py  test_cli_desktop_e2e.py  test_cli_history.py  test_cli_inputs_resolve.py  test_cli_interactive.py  test_cli_mcp_config_start.py  test_cli_mcp_servers.py  test_cli_run_with_config.py  test_cli_tc.py  test_cli_tc_vrl.py  utils.py
examples/python/tests/e2e/server/: __init__.py  conftest.py  test_async_server_e2e.py  test_server_e2e.py
examples/python/tests/integration_tests/: __init__.py  conftest.py  mock_socketio_server.py  mock_sync_smcp_server.py
examples/python/tests/integration_tests/agent/: __init__.py  test_async_client.py  test_auth.py  test_base.py  test_sync_client.py  test_sync_client_desktop.py
examples/python/tests/integration_tests/computer/: __init__.py  conftest.py  test_computer.py  test_desktop_integration.py
examples/python/tests/integration_tests/server/: __init__.py  _local_sync_server.py  (+3 more)
examples/python/tests/unit_tests/: __init__.py
src/: lib.rs
tests/: E2E_TESTING_SUMMARY.md  e2e_basic_test.rs  e2e_desktop_test.rs  e2e_integration_test.rs  e2e_minimal_test.rs  e2e_multi_computer_test.rs  e2e_smoke_test.rs  e2e_tool_call_test.rs  full_stack.rs
tests/common/: mod.rs
tests/e2e/: README.md  helpers.rs  mock_agent.rs  mock_minimal.rs  mod.rs  test_server.rs  test_server_v2.rs
tests/e2e/computer/: cli_repl.rs
(+93 files in other folders)
