[package]
name = "smcp-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
default = ["async"]
async = []
sync = ["async"]

[dependencies]
smcp = { path = "../smcp" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3"
uuid.workspace = true
futures-util.workspace = true
async-trait = "0.1"
rust_socketio.workspace = true

[dev-dependencies]
smcp-server-core = { path = "../smcp-server-core" }
