[package]
name = "smcp-computer"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dev-dependencies]
smcp-server-core = { path = "../smcp-server-core" }
tracing-subscriber = "0.3"
hyper = { version = "1.0", features = ["full"] }
tower = "0.4"
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"

[dependencies]
smcp = { path = "../smcp" }

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
futures-util.workspace = true
async-trait.workspace = true
dashmap.workspace = true
async-recursion = "1.0"

rust_socketio.workspace = true
tokio-util = { version = "0.7", features = ["codec"] }
regex = "1.10"
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }

# MCP SDK / MCP SDK
rmcp = { version = "0.11.0", features = ["client", "server", "transport-child-process", "transport-io", "server-side-http", "transport-streamable-http-server"] }

# HTTP客户端 / HTTP Client
reqwest = { version = "0.11", features = ["json", "stream"] }

# SSE客户端 / SSE Client
eventsource-client = "0.11"
futures = "0.3"

# URL解析 / URL parsing
url = "2.5"

# 密码输入 / Password input
rpassword = "7.2"

[features]
default = ["vrl"]
vrl = ["dep:vrl"]
cli = ["dep:clap", "dep:crossterm", "dep:console"]
e2e = []

[dependencies.vrl]
version = "0.29.0"
optional = true

[dependencies.clap]
version = "4.4"
features = ["derive"]
optional = true

[dependencies.crossterm]
version = "0.29.0"
optional = true

[dependencies.console]
version = "0.16.1"
optional = true
