[package]
name = "smcp-computer"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dev-dependencies]
smcp-server-core = { path = "../smcp-server-core" }
tracing-subscriber.workspace = true
hyper.workspace = true
tower.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
tempfile.workspace = true

[dependencies]
smcp = { path = "../smcp" }

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
futures-util.workspace = true
async-trait.workspace = true
dashmap.workspace = true
async-recursion.workspace = true

rust_socketio.workspace = true
tokio-util.workspace = true
regex.workspace = true
lazy_static.workspace = true
chrono.workspace = true

# MCP SDK / MCP SDK
rmcp.workspace = true

# HTTP客户端 / HTTP Client
reqwest.workspace = true

# SSE客户端 / SSE Client
eventsource-client.workspace = true
futures.workspace = true

# URL解析 / URL parsing
url.workspace = true

# 密码输入 / Password input
rpassword.workspace = true

[features]
default = ["vrl"]
vrl = ["dep:vrl"]
cli = ["dep:clap", "dep:crossterm", "dep:console", "dep:rustyline", "dep:rustyline-derive"]
e2e = []

[dependencies.vrl]
workspace = true
optional = true

[dependencies.clap]
workspace = true
optional = true

[dependencies.crossterm]
workspace = true
optional = true

[dependencies.console]
workspace = true
optional = true

[dependencies.rustyline]
workspace = true
optional = true

[dependencies.rustyline-derive]
workspace = true
optional = true

[[bin]]
name = "smcp-computer"
required-features = ["cli"]
