[package]
name = "smcp-server-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
smcp = { path = "../smcp" }

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

socketioxide.workspace = true
uuid.workspace = true

[dev-dependencies]
rust_socketio.workspace = true
futures-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
hyper-tungstenite.workspace = true
tracing-subscriber.workspace = true
tower.workspace = true
