[package]
name = "smcp-server-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
smcp = { path = "../smcp" }

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

socketioxide.workspace = true
uuid.workspace = true
async-trait = "0.1"
dashmap = "5.5"
http = "1.0"
tower = { workspace = true, optional = true }
hyper = { workspace = true, optional = true }
hyper-util = { workspace = true, optional = true }
http-body-util = { workspace = true, optional = true }

[features]
default = []
hyper = ["dep:tower", "dep:hyper", "dep:hyper-util", "dep:http-body-util"]

[dev-dependencies]
rust_socketio.workspace = true
futures-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
hyper-tungstenite.workspace = true
tracing-subscriber.workspace = true
tower.workspace = true
