[package]
name = "smcp-server-hyper"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
smcp-server-core = { path = "../smcp-server-core" }

tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
socketioxide.workspace = true
tower.workspace = true

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
rust_socketio = { workspace = true }
serde_json = { workspace = true }
futures = "0.3"
async-trait = "0.1"
http = "1.0"
